Come back to previous org

--- a/output/archives.html
+++ b/output/archives.html
@@ -12,10 +12,16 @@
         <header id="banner" class="body">
                 <h1><a href="https://www.sevres-karate.club/">Sèvres Karaté</a></h1>
                 <nav><ul>
+                    <li><a href="https://www.sevres-karate.club/category/test.html">Test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-    <p>This site currently has no content.</p>
+<h1>Archives for Sèvres Karaté</h1>
+
+<dl>
+    <dt>Wed 28 August 2024</dt>
+    <dd><a href="https://www.sevres-karate.club/test-article.html">Test article</a></dd>
+</dl>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
