--- a/output/categories.html
+++ b/output/categories.html
@@ -12,12 +12,14 @@
         <header id="banner" class="body">
                 <h1><a href="https://www.sevres-karate.club/">Sèvres Karaté</a></h1>
                 <nav><ul>
+                    <li><a href="https://www.sevres-karate.club/category/test.html">Test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Categories for Sèvres Karaté</h1>
     <ul>
+        <li><a href="https://www.sevres-karate.club/category/test.html">Test</a> (1)</li>
     </ul>
 </section>
 
